src/objects/LRN_Exam_Area_Template__c.object
<CustomObject>
    <fields>
        <fullName>Is_Generic_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generic Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Area__c</fullName>
        <label>Knowledge Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRN_Exam_Template__c</fullName>
        <label>LRN Exam Template</label>
        <referenceTo>LRN_Exam_Template__c</referenceTo>
        <relationshipName>LRN_Exam_Area_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Area_Questions__c</fullName>
        <label>% of Area Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>LRN Exam Area Template</label>
    <nameField>
        <displayFormat>Exam Area Templ - {00000}</displayFormat>
        <label>LRN Exam Area Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Exam Area Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>